# fluxgit-mcp-server

./: Cargo.toml  Dockerfile  README.md  glama.json  server.json
src/: lib.rs  main.rs
