[package]
name = "fluxgit-mcp-sidecar"
version = "0.1.0"
edition = "2021"
description = "Safety-first read-only Model Context Protocol (MCP) server for Git. AI agents inspect; FluxGit keeps control."
license = "Apache-2.0"
repository = "https://github.com/fluxgit-hq/fluxgit-mcp-server"
homepage = "https://fluxgit.com/features/mcp-agent-git/"
documentation = "https://fluxgit.com/features/mcp-agent-git/"
readme = "README.md"
keywords = ["mcp", "git", "agent", "safety", "ai"]
categories = ["development-tools", "command-line-utilities"]
authors = ["FluxGit"]
rust-version = "1.75"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Ed25519 audit log signing (per-install keypair; opt-in via FLUXGIT_MCP_AUDIT_SIGN_KEY).
# `pem` enables PEM PKCS8 parsing so we can reuse the license-server keypair format.
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
base64 = "0.22"
